Fixes footer to display in center and allows overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,6 @@ input[type=submit]:hover {
 
 .about-description p {
     line-height: 1.5em;
-    text-align: justify;
     margin-bottom: 15px;
 }
 
@@ -212,7 +211,7 @@ input[type=submit]:hover {
 
 .get-in-touch-form {
     background-color: #fe9d8a;
-    max-width: 300px;
+    max-width: 800px;
     flex-grow: 1;
     padding-right: 0;
 }
@@ -235,7 +234,7 @@ input[type=submit]:hover {
 
 .text-input {
     background: white;
-    color: #1b01a2;
+    color: black;
     width: 100%;
     height: 2em;
     border: 1px solid #1b01a2;
@@ -247,18 +246,20 @@ input[type=submit]:hover {
 }
 
 .map-div {
-    max-width: 300px;
+    max-width: 400px;
 }
 
 /* Footer style */
 
 footer {
+    display: flex;
+    justify-content: center;
     background-color: #1b01a2;
     overflow: hidden;
-    height: 200px;
+    min-height: 200px;
     clear: both;
     color: #c24f4c;
-    content-align: center;
+    text-align: center;
 }
 
 .social-wrapper {
